Fix icons on mobile

--- a/src/app/popular/popular.component.scss
+++ b/src/app/popular/popular.component.scss
@@ -26,3 +26,9 @@ td {
 .row {
   cursor:pointer;
 }
+
+@media screen and (max-width: 768px) {
+  .col {
+   text-align: initial;
+  }
+}
